nav menu changed

--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
       </div>
       <!-- Radio Buttons -->
       <p class="radio-group">
-        <label>
-          <input type="radio" name="rotate-cube-side" value="left" /> 2x2 Solver
+        <label class="radio_lable">
+          <input class="radio_input" type="radio" name="rotate-cube-side" value="left" /> 2x2 Solver
         </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="front" checked /> Home
+        <label class="radio_lable">
+          <input class="radio_input" type="radio" name="rotate-cube-side" value="front" checked /> Home
         </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="right" /> 3x3 Solver
+        <label class="radio_lable">
+          <input class="radio_input" type="radio" name="rotate-cube-side" value="right" /> 3x3 Solver
         </label>
-        <!-- <label>
-          <input type="radio" name="rotate-cube-side" value="back" /> back
+        <!-- <label class="radio_lable">
+          <input class="radio_input" type="radio" name="rotate-cube-side" value="back" /> back
         </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="top" /> top
+        <label class="radio_lable">
+          <input class="radio_input" type="radio" name="rotate-cube-side" value="top" /> top
         </label>
-        <label>
-          <input type="radio" name="rotate-cube-side" value="bottom" /> bottom
+        <label class="radio_lable">
+          <input class="radio_input" type="radio" name="rotate-cube-side" value="bottom" /> bottom
         </label> -->
       </p>
 
